# Bad-Apple

./: .gitignore  README.md  create_directory_with_frames.py  image_converting.py  main.py  pyproject.toml  requirements.txt
